fixing of coredata

--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -197,24 +197,37 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="76.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Internet Account Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwk-Ff-Xqk">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Internet Account Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwk-Ff-Xqk">
                                                     <rect key="frame" x="8" y="8" width="584" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="vnb-f6-Umi"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOq-cN-gv4">
+                                                    <rect key="frame" x="212.5" y="38" width="175" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="175" id="k6M-Qz-3Oh"/>
+                                                        <constraint firstAttribute="height" constant="25" id="mm8-Ba-PNv"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="sOq-cN-gv4" firstAttribute="centerX" secondItem="kHG-CS-v29" secondAttribute="centerX" id="37O-yw-GF1"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="trailing" secondItem="kHG-CS-v29" secondAttribute="trailingMargin" id="C0d-bs-Zek"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="top" secondItem="kHG-CS-v29" secondAttribute="topMargin" id="Qgx-ch-cYc"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="leading" secondItem="kHG-CS-v29" secondAttribute="leadingMargin" id="YAo-N8-GSj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sOq-cN-gv4" secondAttribute="bottom" constant="5.5" id="zKo-Fu-irY"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="lblInternetAccountName" destination="Xwk-Ff-Xqk" id="g98-uM-yIO"/>
+                                            <outlet property="lblInternetAccoutUserName" destination="sOq-cN-gv4" id="p6n-yZ-yqC"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -236,10 +249,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="FeV-D8-9Kd"/>
+                    <connections>
+                        <outlet property="tableView" destination="fmJ-xS-uSi" id="Zi0-a7-iFI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHk-H9-LYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-934" y="816"/>
+            <point key="canvasLocation" x="-1066" y="644"/>
         </scene>
         <!--Entry Internet AccountVC-->
         <scene sceneID="WE3-WN-Ili">
@@ -320,7 +336,7 @@
                                     <constraint firstAttribute="height" constant="35" id="0DO-kH-DQ4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ca-aV-C13">
                                 <rect key="frame" x="20" y="343" width="560" height="35"/>
@@ -331,6 +347,9 @@
                                 <state key="normal" title="Save">
                                     <color key="titleColor" red="0.99203723669052124" green="0.9921455979347229" blue="0.9961208701133728" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="SaveInternetAccount:" destination="V93-Al-QKK" eventType="touchUpInside" id="XoA-GS-wh1"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7dS-oR-xbH">
                                 <rect key="frame" x="20" y="116" width="560" height="35"/>
@@ -392,10 +411,15 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DmL-SF-oGh"/>
+                    <connections>
+                        <outlet property="txtAccountName" destination="7dS-oR-xbH" id="rf0-Xj-16L"/>
+                        <outlet property="txtPassword" destination="peI-ri-qCR" id="73R-ej-pRc"/>
+                        <outlet property="txtUserName" destination="rfk-uc-KZB" id="9pM-T7-gKK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YZL-x2-z8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="196" y="876"/>
+            <point key="canvasLocation" x="15" y="881"/>
         </scene>
     </scenes>
 </document>
